# Ximea_Cam_with_Web_Socket_Client_Rust

./: Cargo.toml
src/: main.rs
